# job-agent

./: .env.example  .gitignore  README.md  companies.yaml  pyproject.toml
.github/workflows/: run.yml
data/: seen_jobs.db
profile/: linkedin.json  preferences.yaml  resume.md
src/: config.py  email_sender.py  filters.py  gsheet.py  main.py  prefilter.py  profile.py  scorer.py  store.py
src/prompts/: digest.txt  filter.txt  score.txt
src/sources/: __init__.py  ashby.py  base.py  greenhouse.py  jobspy_source.py  lever.py
