[project]
name = "job-agent"
version = "0.1.0"
description = "Daily job-watcher that scores ATS postings against your profile and emails a digest"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "resend>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.1",
    "python-jobspy>=1.1.79",
    "pandas>=2.0",
    "gspread>=6.1.0",
    "google-auth>=2.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
